# fsrm_data_pipeline

./: .env.example  .gitignore  README.md  agent_summary.py  clear_csv_data.py  main.py  pyproject.toml  settings.json  st_app.py  streamlit_app.py
.github/workflows/: tests.yml
.streamlit/: config.toml
agent/: anomalies.py  gemini.py  workflow.py
pipeline/: config.py  extract.py  load.py  paths.py  settings.py  summary.py  transform.py
scripts/: launch_ui.bat  setup.bat
tests/: debug.py  test_extract.py  test_load.py  test_transform.py
utils/: backfill.py  clear_csv_data.py  get_warehouse_info.py
