[project]
name = "fsrm-ssc-stock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastexcel>=0.20.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pytest>=9.1.1",
    "python-calamine>=0.6.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "xlsxwriter>=3.2.9",
    "xlwings>=0.36.4",
]

[project.scripts]
my-app = "main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = [
    "-p", "no:faulthandler",
]

